tests/test_assets/semantic/invalid/switch/duplicate_default.cog
test::(value: i32) -> i32 {
    switch value {
        case 0:
            return 1;

        default:
            return 2;

        default:
            return 3;
    }
}