tests/test_assets/semantic/invalid/switch/duplicate_default.expected
semantic error at line 9: duplicate default case
1 semantic error generated.
